# investing

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
browser-worker/: Dockerfile  main.py  requirements.txt
data/config/: buffett_sleeve.json
data/state/: bravos_email_state.json  bravos_entry_prices.json  buffett_13f_state.json
docs/: CLOUD_DEPLOYMENT.md  README.md  troubleshoot.md
docs/getting-started/: adding-a-sleeve.md  overview.md  setup.md
docs/reference/: adapter-interface.md  cli-commands.md  configuration.md  data-files.md
docs/sleeves/: bravos.md
docs/workflows/: cloud-deployment.md  daily-sync.md  trade-execution.md
migrations/: 002_add_sleeve_positions.sql
scripts/: cron-bravos.sh  cron-buffett.sh  fetch-detail.ts  fetch-research.ts  init-bravos-ledger.py  init-session.ts  refresh_gmail_token.py  run-bravos-scheduler.py  run-buffett-scheduler.py  run-buffett.py  run-reconcile.py  scrape-active-trades.ts  scrape-bravos-trades.ts  scrape-entry-prices.ts  scrape-idea-prices.ts  scrape-ideas.ts  test-browser-worker.py  test-execution.py  test-signal-processing.py  test-telegram-bot.py
src/: config.py
src/adapters/: __init__.py  base.py  bravos_web.py  buffett_13f.py  http_client.py
src/api/: main.py
src/approval/: telegram.py  workflow.py
src/auth/: login-detector.ts  session-manager.ts
src/brokers/: base.py  robinhood.py
src/db/: migrator.py  models.py  schema.sql  session.py
src/execution/: executor.py  idempotency.py  (+1 more)
(+46 files in other folders)
